@@ -6,48 +6,52 @@ import com.sofkify.productservice.domain.model.Product;
 import com.sofkify.productservice.infrastructure.persistence.entity.ProductEntity;
 import com.sofkify.productservice.infrastructure.persistence.mapper.ProductMapper;
 import com.sofkify.productservice.infrastructure.persistence.repository.JpaProductRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
+@RequiredArgsConstructor
 public class ProductPersistenceAdapter implements ProductPersistencePort {
-
     private final JpaProductRepository jpaProductRepository;
-
-    public ProductPersistenceAdapter(JpaProductRepository jpaProductRepository) {
-        this.jpaProductRepository = jpaProductRepository;
-    }
+    private final ProductMapper mapper;
 
     @Override
+    @Transactional
     public Product save(Product product) {
-        ProductEntity entity = ProductMapper.toEntity(product);
+        ProductEntity entity = mapper.toEntity(product);
         ProductEntity savedEntity = jpaProductRepository.save(entity);
-        return ProductMapper.toDomain(savedEntity);
+        return mapper.toDomain(savedEntity);
     }
 
     @Override
-    public Optional<Product> findById(String id) {
-        return jpaProductRepository.findById(UUID.fromString(id))
-                .map(ProductMapper::toDomain);
+    @Transactional(readOnly = true)
+    public Optional<Product> findById(UUID id) {
+        return jpaProductRepository.findById(id).map(mapper::toDomain);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<Product> findAll() {
-        return jpaProductRepository.findAll()
-                .stream()
-                .map(ProductMapper::toDomain)
-                .toList();
+        return jpaProductRepository.findAll().stream().map(mapper::toDomain).collect(Collectors.toList());
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<Product> findByStatus(String status) {
         ProductStatus productStatus = ProductStatus.valueOf(status.toUpperCase());
         return jpaProductRepository.findByStatus(productStatus)
-                .stream()
-                .map(ProductMapper::toDomain)
-                .toList();
+            .stream().map(mapper::toDomain).collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public boolean existsBySku(String sku) {
+        return jpaProductRepository.existsBySku(sku);
     }
 }
